add parametrized tests.