@@ -4,6 +4,9 @@ import me.grid.email_validator.dataTransferObjects.EmailRequest;
 import me.grid.email_validator.dataTransferObjects.EmailResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvFileSource;
+import org.junit.jupiter.params.provider.CsvSource;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -19,6 +22,7 @@ class EmailValidationServiceTest {
         emailValidationService = new EmailValidationService();
     }
 
+    // no need to parametrize (only one input applicable)
     @Test
     public void withInvalidRequestBody(){
         RuntimeException thrown = assertThrows(
@@ -30,19 +34,45 @@ class EmailValidationServiceTest {
         assertTrue(thrown.getMessage().contains("Not a valid request body"));
     }
 
-    @Test
-    public void withSpecialCharacters(){
-        ArrayList<String> arrayList = new ArrayList<>(List.of(
-                "validemail+_+_+_+_+.......@gmail.com",
-                "invalidEmail####>>>>@gmail.com"
-        ));
+    @ParameterizedTest
+    @CsvFileSource(resources = "/specialCharacters.csv")
+    public void withSpecialCharacters(String validEmail, String invalidEmail){
+        List<String> arrayList = List.of(
+                validEmail,
+                invalidEmail
+        );
         EmailResponse emailResponse = emailValidationService.groupEmails(new EmailRequest(arrayList));
 
         System.out.println(emailResponse.getValidEmails().toString() + " " + emailResponse.getInvalidEmails().toString());
-        assertTrue(emailResponse.getValidEmails().contains(arrayList.getFirst()));
+        assertTrue(emailResponse.getValidEmails().contains(arrayList.get(0)));
         assertTrue(emailResponse.getInvalidEmails().contains(arrayList.get(1)));
     }
 
+    @ParameterizedTest
+    @CsvFileSource(resources = "/missingParts.csv")
+    public void withMissingParts(String invalidEmail){
+        List<String> arrayList = List.of(
+                invalidEmail
+        );
+        EmailResponse emailResponse = emailValidationService.groupEmails(new EmailRequest(arrayList));
+
+        System.out.println(emailResponse.getValidEmails().toString() + " " + emailResponse.getInvalidEmails().toString());
+        assertTrue(emailResponse.getInvalidEmails().contains(arrayList.get(0)));
+    }
+
+    @ParameterizedTest
+    @CsvFileSource(resources = "/subdomains.csv")
+    public void withSubdomains(String validEmail){
+        List<String> arrayList = List.of(
+                validEmail
+        );
+        EmailResponse emailResponse = emailValidationService.groupEmails(new EmailRequest(arrayList));
+
+        System.out.println(emailResponse.getValidEmails().toString() + " " + emailResponse.getInvalidEmails().toString());
+        assertTrue(emailResponse.getValidEmails().contains(arrayList.get(0)));
+    }
+
+    // no need to parametrize (the range is (domainName should be > 2 characters))
     @Test
     public void withShortDomains(){
         ArrayList<String> arrayList = new ArrayList<>(List.of(
@@ -52,19 +82,20 @@ class EmailValidationServiceTest {
         EmailResponse emailResponse = emailValidationService.groupEmails(new EmailRequest(arrayList));
 
         System.out.println(emailResponse.getValidEmails().toString() + " " + emailResponse.getInvalidEmails().toString());
-        assertTrue(emailResponse.getValidEmails().contains(arrayList.getFirst()));
+        assertTrue(emailResponse.getValidEmails().contains(arrayList.get(0)));
         assertTrue(emailResponse.getInvalidEmails().contains(arrayList.get(1)));
     }
 
+    // no need to parametrize (only one input applicable)
     @Test
     public void withEmptyString(){
         ArrayList<String> arrayList = new ArrayList<>(List.of(
-                ""
+                "  "
         ));
         EmailResponse emailResponse = emailValidationService.groupEmails(new EmailRequest(arrayList));
 
         System.out.println(emailResponse.getValidEmails() + " " + emailResponse.getInvalidEmails());
-        assertTrue(emailResponse.getInvalidEmails().contains(arrayList.getFirst()));
+        assertTrue(emailResponse.getInvalidEmails().contains(arrayList.get(0)));
     }
 
 }
